# zk-ace

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
benches/: groth16_bench.rs  prove_verify_bench.rs
contracts/: IZkAceVerifier.sol  ZkAceVerifier.sol
src/: aggregation.rs  api.rs  bridge.rs  errors.rs  lib.rs  replay.rs  traits.rs  types.rs
src/groth16/: circuit.rs  commitment.rs  derive.rs  hash.rs  mod.rs  prover.rs  types.rs  verifier.rs
src/stwo/: mod.rs  prover.rs  serde_utils.rs  trace.rs  types.rs  verifier.rs
src/stwo/air/: mod.rs  preprocessed.rs  schedule.rs  zkace_air.rs
src/stwo/native/: commitment.rs  derive.rs  hash.rs  mod.rs
